# gc

./: .gitignore  README.md  main.py  mnist.py  mnist_representations.py  pyproject.toml  requirements.txt  simple_nets.py  view_only.py
.github/workflows/: lint.yml  test.yml  typecheck.yml
assets/: wta_geometry.py
examples/: 00_debug_learning_rule.py  00_mnist_representations.py  01_activation_functions.py  01_expectations.py  01_mnist_active.py  01_selectivity.py  02_expectations.py  02_mnist_active.py  02_mnist_representations.py  03_mnist_active.py  03_mnist_representations.py  03_selectivity.py  04_mnist_active.py  04_mnist_linear_probe.py  04_mnist_representations.py  05_mnist_all_probes.py  05_mnist_other_probes.py  06_cifar10.py  06_fashion_mnist.py  06_mnist_sweep.py  07_cifar100.py  07_fashion_mnist.py  08_bcm_stability.py  08_cifar10.py  08_cifar100.py  09_cifar10.py  09_cifar100.py  09_mnist_active.py  10_cifar100.py  10_one_layer_clean.py  11_one_layer_clean.py  11_one_layer_noisy.py  12_mnist_active.py  12_one_layer_noisy.py  12_wta_geometry.py  13_bcm_stability.py  13_wta_geometry.py  14_expectations_one_layer.py  14_mnist_active.py  15_expectations_deep.py  (+1 more)
simple/: agents.py  debugger.py  funcs.py
src/: agents.py  debugger.py  envs.py  funcs.py  iotypes.py
tests/: test_agents.py  test_debugger.py  test_examples.py  test_functions.py  test_iotypes.py
