[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gc"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "tensorboard",
    "torchvision",
    "opencv-python==4.12.*",  # Font issue on newer versions
    "pygame-ce",
    "tqdm",
    "dacite",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
]

[tool.setuptools]
packages = ["src", "simple"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = [
    "I",    # import sorting
    "UP",   # pyupgrade (3.12+ syntax)
    "B",    # bugbear -- B905 zip-strict is the win
    "C4",   # comprehensions
    "PIE",  # redundant code
    "PERF", # perf footguns
    "SIM",  # simplify
    "FLY",  # f-string joins
    "ISC",  # implicit string concat
    "PT",   # pytest style
    "NPY",  # numpy deprecations
]
ignore = [
    "B024",   # marker/grouping ABCs are intentional
    "B027",   # EnvBase.__init__ is an intentional signature-only base stub
    "SIM108", # ternary rewrites can hurt readability
]

[tool.ty.src]
exclude = ["assets/"]

[tool.ty.environment]
python = "venv"
root = ["."]

# Lazy/None-init skeletons (cols before weights load, deliberately freed
# weights), setattr-driven attributes, and subclass step() overrides are
# intentional dynamic patterns in these modules; the rules below fire on them
# as false positives, so scope them off rather than litter the code with
# per-line ignores. Library code (envs, funcs, iotypes) stays fully checked.
[[tool.ty.overrides]]
include = ["src/agents.py", "simple/**", "examples/**"]
rules = { "not-subscriptable" = "ignore", "not-iterable" = "ignore", "invalid-assignment" = "ignore", "unresolved-attribute" = "ignore", "invalid-method-override" = "ignore", "invalid-argument-type" = "ignore", "unsupported-operator" = "ignore" }
