[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gc"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "tensorboard",
    "torchvision",
    "opencv-python==4.12.*",  # Font issue on newer versions
    "pygame-ce",
    "tqdm",
    "dacite",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
]

[tool.setuptools]
packages = ["src", "simple"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = [
    "I",    # import sorting
    "UP",   # pyupgrade (3.12+ syntax)
    "B",    # bugbear: B905 zip-strict is the win
    "C4",   # comprehensions
    "PIE",  # redundant code
    "PERF", # perf footguns
    "SIM",  # simplify
    "FLY",  # f-string joins
    "ISC",  # implicit string concat
    "PT",   # pytest style
    "NPY",  # numpy deprecations
]
ignore = [
    "B024",   # marker/grouping ABCs are intentional
    "B027",   # EnvBase.__init__ is an intentional signature-only base stub
    "SIM108", # ternary rewrites can hurt readability
]

[tool.ty.environment]
python = "venv"
root = ["."]

# Lazy/None-init skeletons (cols before weights load, deliberately freed
# weights), setattr-driven attributes, and subclass step() overrides are
# intentional dynamic patterns in these modules; the rules below fire on them
# as false positives, so scope them off rather than litter the code with
# per-line ignores. Library code (envs, funcs, iotypes) stays fully checked.
[[tool.ty.overrides]]
include = ["src/agents.py", "simple/**"]
rules = { "not-subscriptable" = "ignore", "not-iterable" = "ignore", "invalid-assignment" = "ignore", "unresolved-attribute" = "ignore", "invalid-method-override" = "ignore", "invalid-argument-type" = "ignore", "unsupported-operator" = "ignore" }

# Examples get a narrower set: only the rules that fire on the lazy-None /
# monkeypatch / step()-signature patterns they inherit from src/agents.py.
# (A blanket suppression here once hid six examples broken by the Activs
# refactor.) Caveat: ty cannot catch attribute misuse behind ColBase's
# __getattr__ at all, so keeping examples running needs a smoke test, not
# a type checker.
[[tool.ty.overrides]]
include = ["examples/**"]
rules = { "not-subscriptable" = "ignore", "invalid-assignment" = "ignore", "invalid-method-override" = "ignore" }
